--- a/CRMProductDownload/packages.config
+++ b/CRMProductDownload/packages.config
@@ -3,6 +3,8 @@
   <package id="AWSSDK.CloudFront" version="3.7.7.1" targetFramework="net472" />
   <package id="AWSSDK.Core" version="3.7.12.22" targetFramework="net472" />
   <package id="AWSSDK.S3" version="3.7.9.35" targetFramework="net472" />
+  <package id="bootstrap" version="5.2.1" targetFramework="net472" />
+  <package id="jQuery" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.1" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" userInstalled="true" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.1" targetFramework="net45" userInstalled="true" />
