download release  notes and install guides

--- a/CRMProductDownload/CRMProductDownload.csproj
+++ b/CRMProductDownload/CRMProductDownload.csproj
@@ -151,6 +151,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\InstallationNotes.txt" />
+    <Content Include="App_Data\ReleaseNotes.txt" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
